2009-09-04 Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/popen.c (append_argv, destroy_argv): Removed since the only
	module that used it is removed meanwhile.

2009-09-04 Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/popen.c (nessus_popen4): Renamed to openvas_popen4.
	(nessus_popen): Removed. It is not used anywhere.
	(nessus_pclose): Renamed to openvas_pclose.

	* misc/popen.h: Adjust protos accordingly.

	* nasl/nasl_cmd_exec.c (nasl_pread): Adjust to new API accordingly.

2009-09-04  Michael Wiegand <michael.wiegand@intevation.de>

	* misc/openvas_auth.c (openvas_is_user_admin): Added new function to
	determine whether a user has administrative privileges.

	* misc/openvas_auth.h: Exposed openvas_is_user_admin.

2009-09-04 Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/network.c (nessus_SSL_init): Renamed to openvas_SSL_init.
	Also removed the unused parameter.
	(open_SSL_connection, ovas_server_context_new): Adjusted call accordingly.

	* misc/network.h: Adjusted proto accordingly.

	* nasl/nasl.c (main): Adjusted to call of openvas_SSL_init.

2009-09-04  Michael Wiegand <michael.wiegand@intevation.de>

	* configure.in: Removed checks for libl and libfl which caused
	unnecessary linking against libl.

	* libopenvas-config.in: Removed handling of llib.

	* configure: Regenerated.

2009-09-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* nasl/strutils.c, nasl/strutils.h, nasl/nasl_cmd_exec.c, nasl_debug.c:
	Cosmetics, major reformatting.
	Added todos about possible replacement by glib and move to other part of
	openvas-libraries, doc.
	
	* nasl/nasl_var.c: Removed unnecessary include

2009-09-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.c, misc/openvas_server.c,
	misc/openvas_ssh_login.c: Added todos regarding library reorganisation.

2009-09-04  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/plugutils.c: Removed K&R style function declarations,